objects/CSS_Integration_Details__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Custom Setting used to store Integration Connection details</description>
    <fields>
        <fullName>ApplicationName__c</fullName>
        <label>ApplicationName</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AuthEnv__c</fullName>
        <label>AuthEnv</label>
        <length>44</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BusinessUnit__c</fullName>
        <label>BusinessUnit</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DocumentType__c</fullName>
        <label>DocumentType</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Point__c</fullName>
        <label>End Point</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Key__c</fullName>
        <label>Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Logging__c</fullName>
        <label>Logging</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Method_Type__c</fullName>
        <label>Method Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Passcode__c</fullName>
        <label>Passcode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Resource__c</fullName>
        <label>Resource</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Timeout__c</fullName>
        <label>Timeout</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Username__c</fullName>
        <label>Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grant_type__c</fullName>
        <label>grant type</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>CSS_Integration_Details</label>
    <listViews>
        <fullName>All_CSSNA</fullName>
        <columns>NAME</columns>
        <columns>Resource__c</columns>
        <columns>IsActive__c</columns>
        <columns>End_Point__c</columns>
        <columns>ApplicationName__c</columns>
        <columns>grant_type__c</columns>
        <columns>Passcode__c</columns>
        <columns>Key__c</columns>
        <columns>AuthEnv__c</columns>
        <filterScope>Everything</filterScope>
        <label>All CSSNA</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Integrations</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Integrations</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>IAM_ALL</fullName>
        <columns>NAME</columns>
        <columns>End_Point__c</columns>
        <columns>Key__c</columns>
        <columns>Passcode__c</columns>
        <columns>Resource__c</columns>
        <columns>Username__c</columns>
        <columns>ApplicationName__c</columns>
        <columns>grant_type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>IAM</value>
        </filters>
        <label>IAM ALL</label>
        <language>en_US</language>
    </listViews>
</CustomObject>